testData/annotator/unitName.pas
<error descr="Unit and file name do not match">unit unitNameNotMatch;</error>

interface

implementation

end.